[gd_scene load_steps=3 format=3 uid="uid://bcm0gvx8k52t3"]

[ext_resource type="Script" path="res://ui/SubtitleDisplay.gd" id="1_j5k6m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1_egyptian"]
bg_color = Color(0.05, 0.02, 0.08, 0.95)
border_width_top = 2
border_width_bottom = 2
border_color = Color(1, 0.84, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_left = 12
corner_radius_bottom_right = 12

[node name="SubtitleDisplay" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_j5k6m")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1_egyptian")

[node name="SubtitleContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0

[node name="SpeakerLabel" type="Label" parent="BackgroundPanel/SubtitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Khenti:"
horizontal_alignment = 1

[node name="SubtitleLabel" type="RichTextLabel" parent="BackgroundPanel/SubtitleContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center][color=gold]Por Ra! Vocês pagarão pela traição![/color][/center]"
fit_content = true
autowrap_mode = 3

[node name="SoundIndicators" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -80.0
offset_right = 50.0
offset_bottom = -30.0

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.033
autostart = false